--- a/src/templates/view.html
+++ b/src/templates/view.html
@@ -31,7 +31,13 @@
 
 {% embed 'view-edit.html' %}
   {% block createnew %}
-    {% include 'create-new.html' %}
+    <div class='d-flex'>
+      <!-- TODO replace 'entry' with experiment|item -->
+      <div class='align-self-center'><h3>{{ Entity.page|capitalize }} > {{ 'Viewing an entry'|trans }}</h3></div>
+      <div class='ml-auto'>
+        {% include 'create-new.html' %}
+      </div>
+    </div>
   {% endblock %}
   {% block createmodal %}
     {% include 'show-view-edit.html' %}
@@ -50,163 +56,190 @@
 </div>
 {% endif %}
 
-    <div class='mb-2'>
-      {% if not (Entity.isReadOnly or Entity.entityData.locked) %}
-      <div class='hl-hover-gray d-inline p-2 rounded'>
-        <a class='elab-tooltip' href='#' data-action='edit'>
-          <span>{{ 'Edit'|trans }}</span>
-          <i title='{{ 'Edit'|trans }}' class='fas fa-pencil-alt fa-2x' style='color:#29AEB9'></i>
-        </a>
+<hr>
+
+<!-- TOP TOOLBAR -->
+<div class='d-flex align-items-center'>
+  <!-- BACK TO LINK -->
+  {% if App.Session.has('lastquery') %}
+    {% set lastquery = App.Session.get('lastquery') %}
+  {% else %}
+    {% set lastquery = 'mode=show' %}
+  {% endif %}
+
+  <a title='{{ 'Back to listing'|trans }}' href='?{{ lastquery }}'>
+    <div class='hl-hover-gray p-2 rounded'>
+      <i class='fas fa-arrow-left fa-fw'></i>
+    </div>
+  </a>
+
+  <div class='vertical-separator'></div>
+
+  {% if not (Entity.isReadOnly or Entity.entityData.locked) %}
+    {# EDIT #}
+    <a class='mr-3' title='{{ 'Edit'|trans }}' href='?mode=edit&id={{ Entity.id }}'>
+      <div class='hl-hover-gray p-2 rounded main-action-button'>
+        <i class='fas fa-pencil fa-fw'></i>
       </div>
-      {% endif %}
+    </a>
+  {% endif %}
 
-      {% if not App.Session.has('is_anon') %}
-        <div class='hl-hover-gray d-inline p-2 rounded'>
-          <a class='elab-tooltip' href='#' data-action='duplicate-entity'>
-            <span>{{ 'Duplicate'|trans }}</span>
-            <i title='{{ 'Duplicate'|trans }}' class='far fa-copy fa-2x'></i>
-          </a>
+  {% if not App.Session.has('is_anon') %}
+
+    {# DUPLICATE #}
+    <div class='mr-3'>
+      <div title='{{ 'Duplicate'|trans }}' data-action='duplicate-entity' class='hl-hover-gray p-2 rounded'>
+        <i class='fas fa-copy fa-fw'></i>
+      </div>
+    </div>
+
+    {% if Entity.type == 'items' and Entity.entityData.bookable %}
+      <a class='mr-3' title='{{ 'Book item'|trans }}' href='team.php?idtem={{ Entity.id }}'>
+        <div class='hl-hover-gray p-2 rounded'>
+          <i class='fas fa-calendar-plus fa-fw'></i>
         </div>
+      </a>
+    {% endif %}
 
-      {% if Entity.type == 'items' %}
-        {% if Entity.entityData.bookable %}
-          <div class='hl-hover-gray d-inline p-2 rounded'>
-            <a class='elab-tooltip' href='team.php?item={{ Entity.id }}'>
-              <span>{{ 'Book item'|trans }}</span>
-              <i title='{{ 'Book item'|trans }}' class='fas fa-calendar-plus fa-2x'></i>
-            </a>
-          </div>
-        {% endif %}
-      {% endif %}
+  {% endif %}
 
-      <!-- LOCK -->
+  {% if not App.Session.has('is_anon') and App.Config.configArr.anon_users and Entity.entityData.access_key %}
+    {# SHARE #}
+    <div class='mr-3'>
+      <div title='{{ 'Share'|trans }}' data-action='share' class='hl-hover-gray p-2 rounded'>
+        <i class='fas fa-share-alt fa-fw'></i>
+      </div>
+    </div>
+    <input type='text' class='form-control' aria-label='{{ 'Share'|trans }}' id='shareLinkInput' value='' hidden />
+  {% endif %}
+
+  <div class='vertical-separator'></div>
+
+  {# TIMESTAMP EXPERIMENT #}
+  {% if Entity.type == 'experiments' and not App.Session.has('is_anon') %}
+    <div class='mr-3'>
+      <div title='{{ 'Timestamp Experiment'|trans }}' data-action='toggle-modal' data-target='timestampModal' class='hl-hover-gray p-2 rounded'>
+        <i class='fas fa-calendar-check fa-fw'></i>
+      </div>
+    </div>
+  {% endif %}
+
+  {# BLOXBERG TIMESTAMP #}
+  {% if not Entity.isReadOnly and App.Config.configArr.blox_enabled %}
+    <div class='mr-3'>
+      <div title='{{ 'Add to blockchain'|trans }}' data-action='bloxberg' class='hl-hover-gray p-2 rounded'>
+        <i class='fas fa-cubes fa-fw'></i>
+      </div>
+    </div>
+  {% endif %}
+
+  <div class='vertical-separator'></div>
+
+  {# DOWNLOAD / EXPORT MENU #}
+  <div class='dropdown'>
+    <div class='hl-hover-gray d-inline p-2 rounded mr-3' title='{{ 'Export'|trans }}' data-toggle='dropdown' aria-haspopup='true' aria-expanded='false' aria-label='{{ 'Export'|trans }}' role='button'>
+      <i class='fas fa-download fa-fw'></i>
+    </div>
+    <div class='dropdown-menu' aria-label='{{ 'Export'|trans }}'>
+      <a class='dropdown-item' href='api/v2/{{ Entity.type }}/{{ Entity.id }}?format=pdf'><i class='fas fa-file-pdf fa-fw'></i> {{ 'PDF File'|trans }}</a>
+      <a class='dropdown-item' href='api/v2/{{ Entity.type }}/{{ Entity.id }}?format=pdfa'><i class='fas fa-file-pdf fa-fw'></i> {{ 'Long term storage PDF'|trans }}</a>
+      <a class='dropdown-item' href='api/v2/{{ Entity.type }}/{{ Entity.id }}?format=zip'><i class='fas fa-file-archive fa-fw'></i> {{ 'ZIP Archive'|trans }}</a>
+      <a class='dropdown-item' href='api/v2/{{ Entity.type }}/{{ Entity.id }}?format=zipa'><i class='fas fa-file-archive fa-fw'></i> {{ 'Long term storage ZIP'|trans }}</a>
+      <a class='dropdown-item' href='api/v2/{{ Entity.type }}/{{ Entity.id }}?format=eln'><i class='fas fa-box-archive fa-fw'></i> {{ 'ELN Archive'|trans }}</a>
+      <a class='dropdown-item' href='api/v2/{{ Entity.type }}/{{ Entity.id }}?format=csv'><i class='fas fa-file-csv fa-fw'></i> {{ 'CSV File'|trans }}</a>
+      <a class='dropdown-item' href='api/v2/{{ Entity.type }}/{{ Entity.id }}?format=qrpng'><i class='fas fa-qrcode fa-fw'></i> {{ 'QR Code'|trans }}</a>
+    </div>
+  </div>
+
+  {% if not App.Session.has('is_anon') %}
+
+    {# flex-nowrap to avoid going to two lines #}
+    <div class='ml-auto d-flex flex-nowrap'>
+      {# TOGGLE PIN #}
+      <div class='mr-3'>
+        <div title='{{ 'Toggle pin'|trans }}' data-action='toggle-pin' id='toggle-pin-icon-div' class='hl-hover-gray p-2 rounded'>
+          <i id='toggle-pin-icon' class='fas fa-thumbtack {{ Entity.Pins.isPinned ? '' : 'color-weak' }} fa-fw'></i>
+        </div>
+      </div>
+
+      {# LOCK #}
       {% set lockIcon = 'fa-lock-open' %}
       {% set alt = 'Lock/Unlock item'|trans %}
       {% if Entity.entityData.locked %}
           {% set lockIcon = 'fa-lock' %}
           {% set alt = Entity.entityData.locked_at %}
       {% endif %}
-      <div class='hl-hover-gray d-inline p-2 rounded'>
-        <a class='elab-tooltip' href='#' data-action='lock-entity'>
-            <span>{{ alt }}</span>
-            <i title='{{ alt }}' class='fas {{lockIcon}} fa-2x'></i>
-        </a>
+      <div title='{{ alt }}' data-action='lock-entity' class='hl-hover-gray p-2 rounded'>
+        <i class='fas {{ lockIcon }} fa-fw'></i>
       </div>
-      {% endif %}
+    {% endif %}
+  </div>
+</div>
 
-      {% if not App.Session.has('is_anon') and App.Config.configArr.anon_users and Entity.entityData.access_key %}
-        <div class='hl-hover-gray d-inline p-2 rounded'>
-          <a class='elab-tooltip' href='#' data-action='share'>
-            <span>{{ 'Share'|trans }}</span>
-            <i title='{{ 'Share'|trans }}' class='fas fa-share-alt fa-2x'></i>
-          </a>
-          <input type='text' class='form-control' aria-label='{{ 'Share'|trans }}' id='shareLinkInput' value='' hidden />
-        </div>
-      {% endif %}
 
-      <!-- show timestamp button -->
-      {% if Entity.type == 'experiments' and not App.Session.has('is_anon') %}
-        <div class='hl-hover-gray d-inline p-2 rounded'>
-          <a href='#' class='elab-tooltip' data-action='toggle-modal' data-target='timestampModal'>
-            <span>{{ 'Timestamp Experiment'|trans }}</span>
-            <i title='{{ 'Timestamp Experiment'|trans }}' class='far fa-calendar-check fa-2x'></i>
-          </a>
-        </div>
-      {% endif %}
+<hr>
+<section id='main_section'>
 
-      <!-- BLOXBERG BUTTON -->
-      {% if not Entity.isReadOnly and App.Config.configArr.blox_enabled %}
-        <div class='hl-hover-gray d-inline p-2 rounded'>
-          <a href='#' class='elab-tooltip' data-action='bloxberg'>
-            <span>{{ 'Add to blockchain'|trans }}</span>
-            <i title='{{ 'Add to blockchain'|trans }}' class='fas fa-cubes fa-2x'></i>
-          </a>
-        </div>
-      {% endif %}
-
-      <!-- Download / Export menu -->
-      <div class='hl-hover-gray d-inline p-2 rounded'>
-        <div class='dropdown d-inline'>
-          <a class='elab-tooltip' data-toggle='dropdown' aria-haspopup='true' aria-expanded='false' aria-label='{{ 'Export'|trans }}' role='button'>
-            <span>{{ 'Export'|trans }}</span>
-            <i title='{{ 'Export'|trans }}' class='fas fa-download fa-2x'></i>
-          </a>
-          <span class='dropdown-menu' aria-label='{{ 'Export'|trans }}'>
-            <a class='dropdown-item' href='api/v2/{{ Entity.type }}/{{ Entity.id }}?format=pdf'><i class='fas fa-file-pdf fa-fw'></i> {{ 'PDF File'|trans }}</a>
-            <a class='dropdown-item' href='api/v2/{{ Entity.type }}/{{ Entity.id }}?format=pdfa'><i class='fas fa-file-pdf fa-fw'></i> {{ 'Long term storage PDF'|trans }}</a>
-            <a class='dropdown-item' href='api/v2/{{ Entity.type }}/{{ Entity.id }}?format=zip'><i class='fas fa-file-archive fa-fw'></i> {{ 'ZIP Archive'|trans }}</a>
-            <a class='dropdown-item' href='api/v2/{{ Entity.type }}/{{ Entity.id }}?format=zipa'><i class='fas fa-file-archive fa-fw'></i> {{ 'Long term storage ZIP'|trans }}</a>
-            <a class='dropdown-item' href='api/v2/{{ Entity.type }}/{{ Entity.id }}?format=eln'><i class='fas fa-box-archive fa-fw'></i> {{ 'ELN Archive'|trans }}</a>
-            <a class='dropdown-item' href='api/v2/{{ Entity.type }}/{{ Entity.id }}?format=csv'><i class='fas fa-file-csv fa-fw'></i> {{ 'CSV File'|trans }}</a>
-            <a class='dropdown-item' href='api/v2/{{ Entity.type }}/{{ Entity.id }}?format=qrpng'><i class='fas fa-qrcode fa-fw'></i> {{ 'QR Code'|trans }}</a>
-          </span>
-        </div>
-      </div>
-    </div>
-
-<section class='item' id='main_section' style='padding:15px;border-left: 6px solid #{{ Entity.entityData.color }}'>
+  {# DATE and RATING #}
   <div class='d-flex'>
-    <div class='mr-auto'>
-      <!-- CATEGORY AND RATING -->
-      <div>
-        <i aria-hidden='true' class='fas fa-clipboard-{{ Entity.type == 'experiments' ? 'check' : 'list' }}'></i>
-        <span class='malleableCategory hl-hover-gray rounded p-1'>{{ Entity.entityData.category }}</span>
-          {% if Entity.entityData.rating > 0 %}
-            <span class='rating-show rounded p-1'><i class='fas fa-star' title='☻'></i>{{ Entity.entityData.rating }}</span>
-          {% endif %}
-        <!-- build the tag array -->
-        {% if Entity.entityData.tags|length > 0 %}
-          <span class='tags mathjax-ignore d-flex-inline flex-wrap'>
-            <i class='fas fa-tags mr-2'></i>
-            {% set tagsIdArr = Entity.entityData.tags_id|split(',') %}
-            {% set tagsValueArr = Entity.entityData.tags|split('|') %}
-            {% for key, tag in tagsValueArr %}
-              {# the key allows to get the id stored in tagsIdArr #}
-              <a class='tag' href='?mode=show&tags%5B%5D={{ tag|url_encode }}'>{{ tag|raw }}</a>
-            {% endfor %}
-          </span>
-        {% endif %}
-        <!-- DATE -->
-        <div>
-          <i aria-hidden='true' class='far fa-calendar-alt mr-1'></i>{{ 'Started on'|trans }} {{ Entity.entityData.date|date('Y-m-d') }}
-        </div>
-      </div>
-    </div>
-
-    <div class=''>
-      <!-- CAN READ -->
-      {% set rw = 'canread' %}
-      {% set can = Entity.entityData.canread|canToHuman %}
-      {% include('view-permissions.html') %}
-    </div>
-
-    <div class=''>
-      <!-- CAN WRITE -->
-      {% set rw = 'canwrite' %}
-      {% set can = Entity.entityData.canwrite|canToHuman %}
-      {% include('view-permissions.html') %}
-    </div>
-
+    {# DATE #}
     <div>
-      <!-- TOGGLE PIN -->
-      <p class='float-right d-inline'>
-        <a class='elab-tooltip ml-2' data-action='toggle-pin' href='#'>
-          <span>{{ 'Toggle pin'|trans }}</span>
-          <i title='{{ 'Toggle pin'|trans }}' id='toggle-pin-icon' class='fas fa-thumbtack {{ Entity.Pins.isPinned ? '' : 'grayed-out' }} fa-2x'></i>
-        </a>
-      </p>
+      {{ 'Started on'|trans }} {{ Entity.entityData.date|date('Y-m-d') }}
+    </div>
+    {# RATING #}
+    <div class='ml-auto'>
+      {% if Entity.entityData.rating > 0 %}
+        <span class='rating-show rounded p-1'><i class='fas fa-star' title='☻'></i>{{ Entity.entityData.rating }}</span>
+      {% endif %}
     </div>
   </div>
 
-
-  <!-- TITLE : click on it to go to edit mode only if we are not in read only mode -->
-  {% set isEditable = not Entity.isReadOnly and not Entity.entityData.locked %}
-  <h1 id='documentTitle' class='mb-2 title {{ isEditable ? 'hover-action' }}' {{ isEditable ? 'data-action="edit"' }}>
-      {% if Entity.type == 'items' %}
-          <span style='color:#{{ Entity.entityData.color }}'>{{ Entity.entityData.category }}</span>
-      {% endif %}
-      {{ Entity.entityData.title|raw }}
+  {# TITLE #}
+  <h1 id='documentTitle' class='mb-4 title color-strong'>
+    {% if Entity.type == 'items' %}
+      <span style='color:#{{ Entity.entityData.color }}'>{{ Entity.entityData.category }}</span>
+    {% endif %}
+    {{ Entity.entityData.title|raw }}
   </h1>
+
+  {# CATEGORY #}
+  <div class='d-flex mb-2 align-items-center'>
+    <div class='edit-mode-label'>
+      <i aria-hidden='true' class='fas fa-folder'></i> {{ Entity.type == 'experiments' ? 'Status'|trans : 'Category'|trans }}
+    </div>
+    <span style='--bg: #{{ Entity.entityData.color }}' class='category-button malleableCategory hl-hover-gray rounded p-1'>{{ Entity.entityData.category|upper }}</span>
+  </div>
+
+  {# TAGS #}
+  <div class='d-flex mb-2 align-items-center'>
+    {% if Entity.entityData.tags|length > 0 %}
+      <div class='edit-mode-label'>
+        <i class='fas fa-tags mr-2'></i> {{ 'Tags'|trans }}
+      </div>
+      <span class='tags mathjax-ignore d-flex-inline flex-wrap'>
+        {% set tagsIdArr = Entity.entityData.tags_id|split(',') %}
+        {% set tagsValueArr = Entity.entityData.tags|split('|') %}
+        {% for key, tag in tagsValueArr %}
+          {# the key allows to get the id stored in tagsIdArr #}
+          <a class='tag' href='?mode=show&tags%5B%5D={{ tag|url_encode }}'>{{ tag|raw }}</a>
+        {% endfor %}
+      </span>
+    {% endif %}
+  </div>
+
+  {# PERMISSIONS #}
+  <div class='d-flex mb-2 align-items-center'>
+    {# CAN READ #}
+    {% set rw = 'canread' %}
+    {% set can = Entity.entityData.canread|canToHuman %}
+    {% include('view-permissions.html') %}
+  </div>
+  <div class='d-flex mb-2 align-items-center'>
+    {# CAN WRITE #}
+    {% set rw = 'canwrite' %}
+    {% set can = Entity.entityData.canwrite|canToHuman %}
+    {% include('view-permissions.html') %}
+  </div>
 
   <!-- SHOW EVENTS -->
   {% if Entity.entityData.is_bound %}<i class='far fa-calendar-alt'></i>
@@ -220,7 +253,7 @@
       {% set nextStepsArr = next_step|split('|') %}
       {% set next = nextStepsArr|first %}
       <p>
-      {{ 'Next step'|trans }}: <span style='color:black'>{{ next|raw }}</span>
+      <span class='next-step-text'>{{ 'Next step'|trans }}:</span> <span class='color-strong'>{{ next|raw }}</span>
       </p>
   {% endif %}
 
@@ -242,12 +275,15 @@
 
   <!-- METADATA view -->
   {% if Entity.entityData.metadata %}
-    <div class='box col-md-12'>
+    <hr>
+    <div>
       {{ Entity.entityData.metadata|formatMetadata }}
     </div>
   {% endif %}
 
 </section>
+
+<hr>
 
 {% include 'steps-links-view.html' %}
 
@@ -256,12 +292,14 @@
 <!-- only show the json editor if there is at least one file with a .json extension -->
 {% if Entity.entityData.uploads|filter(u => u.real_name|getExt == 'json') %}
   {% include 'json-editor.html' %}
+  <hr>
 {% endif %}
 
-<section class='box' id='commentsDiv'>
+
+<div id='commentsDiv'>
   {% if App.Session.get('is_auth') and not App.Session.has('is_anon') %}
     <div id='comment'>
-    <h3 title='{{ 'Toggle visibility'|trans }}' data-action='toggle-next' data-icon='commentsIcon' class='d-inline'><i id='commentsIcon' class='fas fa-chevron-circle-down'></i> <i class='fas fa-fw fa-comments'></i> {{ 'Comments'|trans }}</h3>
+    <h3 title='{{ 'Toggle visibility'|trans }}' data-action='toggle-next' data-icon='commentsIcon' class='d-inline'><i id='commentsIcon' class='fas fa-chevron-circle-down'></i> {{ 'Comments'|trans }}</h3>
     <div class='mt-2' id='commentsInnerDiv' data-save-hidden='commentsInnerDiv'>
         {% for comment in Entity.entityData.comments %}
           <div class='box'>
@@ -290,9 +328,9 @@
       </div>
     </div>
   {% endif %}
-</section>
+</div>
 
-  <div class='maingray text-right d-flex flex-column'>
+  <div class='text-right d-flex flex-column'>
     <!-- CHANGELOG -->
     <div>
       <i class='fas fa-list mr-1'></i>
