--- a/src/templates/edit.html
+++ b/src/templates/edit.html
@@ -276,8 +276,8 @@
       </div>
 
       <div>
-        <button id='clearCanvas' class='button btn btn-danger'>{{ 'Clear'|trans }}</button>
-        <button id='saveCanvas' class='button btn btn-primary' data-type='{{ Entity.type }}' data-id='{{ Entity.id }}'>{{ 'Save'|trans }}</button>
+        <button id='clearCanvas' class='btn btn-danger'>{{ 'Clear'|trans }}</button>
+        <button id='saveCanvas' class='btn btn-primary' data-type='{{ Entity.type }}' data-id='{{ Entity.id }}'>{{ 'Save'|trans }}</button>
       </div>
       <p>{{ 'Use %sCtrl%s + click to add text'|trans|format('<kbd>', '</kbd>')|raw }}</p>
     </div>
