--- a/src/templates/editusers.html
+++ b/src/templates/editusers.html
@@ -193,7 +193,7 @@
 
     <!-- SUBMIT -->
     <div class='col-md-12 text-center mt-2'>
-      <button data-action='create-user' class='button btn btn-primary'>{{ 'Create'|trans }}</button>
+      <button data-action='create-user' class='btn btn-primary'>{{ 'Create'|trans }}</button>
     </div>
   </div>
 </div>
