--- a/src/templates/json-editor.html
+++ b/src/templates/json-editor.html
@@ -38,7 +38,7 @@
 
     <div hidden id='jsonImportFileDiv'>
       <input type='file' name='file' accept='.json' id='jsonImportFileInput' />
-      <button type='submit' data-action='json-upload-file' class='button btn btn-primary'>{{ 'Import'|trans }}</button>
+      <button type='submit' data-action='json-upload-file' class='btn btn-primary'>{{ 'Import'|trans }}</button>
     </div>
     <span data-action='toggle-next'><i class='fas fa-fw fa-info-circle'></i></span><span hidden><a target='_blank' href='https://doc.elabftw.net/metadata.html'>{{ 'See documentation about extra fields.'|trans }} <i class='fas fa-fw fa-arrow-up-right-from-square'></i></a></span>
     <h6 id='jsonEditorTitle'></h6>
