--- a/src/templates/search.html
+++ b/src/templates/search.html
@@ -433,10 +433,10 @@
 
     <!-- Search action buttons -->
     <div style='margin:30px;' class='text-center'>
-      <button id='searchButton' class='button btn btn-primary' value='Submit' type='submit'>
+      <button id='searchButton' class='btn btn-primary' value='Submit' type='submit'>
         {{ 'Launch search'|trans }}
       </button>
-      <a href='search.php' class='button btn btn-danger'>
+      <a href='search.php' class='btn btn-danger'>
         {{ 'Clear all'|trans }}
       </a>
     </div>
