--- a/src/templates/show-view-edit.html
+++ b/src/templates/show-view-edit.html
@@ -71,7 +71,7 @@
 
           <div class='mt-4 text-center'>
             <div id='errorHolder' class='alert-danger m-2'></div>
-            <button type='submit' data-action='check-max-size' data-maxsize='{{ maxUploadSize }}' data-input='import_modal_file_input' class='button btn btn-primary'>{{ 'Import'|trans }}</button>
+            <button type='submit' data-action='check-max-size' data-maxsize='{{ maxUploadSize }}' data-input='import_modal_file_input' class='btn btn-primary'>{{ 'Import'|trans }}</button>
           </div>
 
         </form>
