--- a/src/templates/steps-links-edit.html
+++ b/src/templates/steps-links-edit.html
@@ -63,7 +63,7 @@
                         <option value='{{ '+1 day'|toDatetime }}'>1 day</option>
                         <option value='{{ '+1 week'|toDatetime }}'>1 week</option>
                       </select>
-                      <button class='button btn btn-primary' data-action='step-update-deadline' data-stepid='{{ step.id }}'>{{ 'Save'|trans }}</button>
+                      <button class='btn btn-primary' data-action='step-update-deadline' data-stepid='{{ step.id }}'>{{ 'Save'|trans }}</button>
                     </div>
                     {% endif %}
                     </div>
