--- a/src/templates/team.html
+++ b/src/templates/team.html
@@ -35,7 +35,7 @@
 
         <!-- BIND EXPERIMENT -->
         <div id='eventBoundExp'></div>
-        <button data-action='scheduler-rm-bind' data-type='experiment' aria-hidden='true' class='button btn btn-danger' type='button'>{{ 'Unbind'|trans }}</button>
+        <button data-action='scheduler-rm-bind' data-type='experiment' aria-hidden='true' class='btn btn-danger' type='button'>{{ 'Unbind'|trans }}</button>
         <div class='mt-2'>
           <i class='fas fa-link mr-1'></i><h5 class='d-inline'>{{ 'Bind an experiment'|trans }}</h5>
             <div id='binddivexp' class='input-group mb-3'>
@@ -50,7 +50,7 @@
         </div>
         <!-- BIND ITEM -->
         <div id='eventBoundDb'></div>
-        <button data-action='scheduler-rm-bind' data-type='item_link' aria-hidden='true' class='button btn btn-danger' type='button'>{{ 'Unbind'|trans }}</button>
+        <button data-action='scheduler-rm-bind' data-type='item_link' aria-hidden='true' class='btn btn-danger' type='button'>{{ 'Unbind'|trans }}</button>
         <div class='mt-2'>
           <i class='fas fa-link mr-1'></i><h5 class='d-inline'>{{ 'Bind an item'|trans }}</h5>
             <div id='binddivdb' class='input-group mb-3'>
@@ -66,10 +66,10 @@
 
 
         <h5>{{ 'Delete this event'|trans }}</h5>
-        <button type='button' id='deleteEvent' class='button btn btn-danger'>{{ 'Delete'|trans }}</button>
+        <button type='button' id='deleteEvent' class='btn btn-danger'>{{ 'Delete'|trans }}</button>
       </div>
       <div class='modal-footer'>
-        <button type='button' class='button btn btn-secondary' data-dismiss='modal'>{{ 'Cancel'|trans }}</button>
+        <button type='button' class='btn btn-secondary' data-dismiss='modal'>{{ 'Cancel'|trans }}</button>
       </div>
     </div>
   </div>
@@ -171,7 +171,7 @@
       <textarea form='emailTeamForm' id='emailBody' name='body' class='form-control' rows='10' required></textarea>
     </div>
     <div class='mt-4 text-center'>
-      <button type='submit' class='button btn btn-primary'>{{ 'Send'|trans }}</button>
+      <button type='submit' class='btn btn-primary'>{{ 'Send'|trans }}</button>
     </div>
   </form>
 </div>
