--- a/src/templates/templates-edit.html
+++ b/src/templates/templates-edit.html
@@ -36,7 +36,7 @@
   </div>
 {% endif %}
 <div class='text-center mt-4'>
-  <button data-action='update-template' class='button btn btn-primary'>{{ 'Save'|trans }}</button>
+  <button data-action='update-template' class='btn btn-primary'>{{ 'Save'|trans }}</button>
 </div>
 
 <div id='metadataDiv' class='col-md-6'></div>
