--- a/src/scss/_footer.scss
+++ b/src/scss/_footer.scss
@@ -7,7 +7,7 @@
  */
 
 footer {
-    border-top: solid 1px $bordersgray;
+    border-top: solid 1px $firstgray;
     font-size: 11px;
     margin: 60px 5px;
     padding-top: 10px;
