--- a/src/templates/admin.html
+++ b/src/templates/admin.html
@@ -9,7 +9,7 @@
     <ul>
     {% for user in unvalidatedUsersArr %}
       <li>
-        {{ user.fullname|raw }} ({{ user.email }}) <button class='button btn btn-primary' data-action='validate-user' data-userid='{{ user.userid }}'>{{ 'Validate'|trans }}</button>
+        {{ user.fullname|raw }} ({{ user.email }}) <button class='btn btn-primary' data-action='validate-user' data-userid='{{ user.userid }}'>{{ 'Validate'|trans }}</button>
       </li>
     {% endfor %}
     </ul>
@@ -164,7 +164,7 @@
     </textarea>
     <p class='smallgray'>{{ 'This is the default text when someone creates an experiment.'|trans }}</p>
     <div class='mt-2 text-center'>
-      <button data-action='patch-team-common-template' data-id='{{ teamConfigArr.id }}' class='button btn btn-primary'>{{ 'Save'|trans }}</button>
+      <button data-action='patch-team-common-template' data-id='{{ teamConfigArr.id }}' class='btn btn-primary'>{{ 'Save'|trans }}</button>
     </div>
     <hr>
 
@@ -172,7 +172,7 @@
     <textarea style='height:400px' class='markdown-textarea' name="common_template_md" id='common_template_md'>{{ teamConfigArr.common_template_md|raw }}</textarea>
     <p class='smallgray'>{{ 'This is the default text when someone creates an experiment.'|trans }}</p>
     <div class='mt-2 text-center'>
-      <button data-action='patch-team-common-template-md' data-id='{{ teamConfigArr.id }}' class='button btn btn-primary'>{{ 'Save'|trans }}</button>
+      <button data-action='patch-team-common-template-md' data-id='{{ teamConfigArr.id }}' class='btn btn-primary'>{{ 'Save'|trans }}</button>
     </div>
 
   </div>
@@ -249,7 +249,7 @@
     <hr>
 
     <div class='mt-3 text-center'>
-      <button class='button btn btn-primary' data-teamid='{{ App.Users.userData.team }}' data-action='create-status'>{{ 'Save'|trans }}</button>
+      <button class='btn btn-primary' data-teamid='{{ App.Users.userData.team }}' data-action='create-status'>{{ 'Save'|trans }}</button>
     </div>
   </div>
 
@@ -276,11 +276,11 @@
             </li>
 
             <li class='list-inline-item'>
-              <button data-id='{{ status.category_id }}' class='button btn btn-primary' data-teamid='{{ App.Users.userData.team }}' data-action='update-status'>{{ 'Save'|trans }}</button>
+              <button data-id='{{ status.category_id }}' class='btn btn-primary' data-teamid='{{ App.Users.userData.team }}' data-action='update-status'>{{ 'Save'|trans }}</button>
             </li>
 
             <li class='list-inline-item'>
-              <button data-id='{{ status.category_id }}' data-teamid='{{ App.Users.userData.team }}' data-action='destroy-status' class='button btn btn-danger' >{{ 'Delete'|trans }}</button>
+              <button data-id='{{ status.category_id }}' data-teamid='{{ App.Users.userData.team }}' data-action='destroy-status' class='btn btn-danger' >{{ 'Delete'|trans }}</button>
             </li>
             <li class='list-inline-item'>
               <span class='draggable sortableHandle float-right'>
@@ -366,8 +366,8 @@
       {% include 'json-editor.html' %}
 
       <div class='text-center mt-3'>
-        <button class='button btn btn-primary' data-id='{{ Entity.id }}' data-action='itemstypes-update'>{{ 'Save'|trans }}</button>
-        <button class='button btn btn-danger' data-id='{{ Entity.id }}' data-action='itemstypes-destroy'>{{ 'Delete'|trans }}</button>
+        <button class='btn btn-primary' data-id='{{ Entity.id }}' data-action='itemstypes-update'>{{ 'Save'|trans }}</button>
+        <button class='btn btn-danger' data-id='{{ Entity.id }}' data-action='itemstypes-destroy'>{{ 'Delete'|trans }}</button>
       </div>
     {% endif %}
 
@@ -404,7 +404,7 @@
     <hr>
 
     <div class='my-2 text-center'>
-      <button data-action='export-category' class='button btn btn-primary'>{{ 'Export'|trans }}</button>
+      <button data-action='export-category' class='btn btn-primary'>{{ 'Export'|trans }}</button>
     </div>
   </div>
 
@@ -435,7 +435,7 @@
     <hr>
 
     <div class='mt-2 text-center'>
-      <button data-action='export-user' class='button btn btn-primary'>{{ 'Export'|trans }}</button>
+      <button data-action='export-user' class='btn btn-primary'>{{ 'Export'|trans }}</button>
     </div>
 
   </div>
@@ -456,7 +456,7 @@
     <hr>
 
     <div class='mt-2 text-center'>
-      <button data-action='export-scheduler' class='button btn btn-primary'>{{ 'Export'|trans }}</button>
+      <button data-action='export-scheduler' class='btn btn-primary'>{{ 'Export'|trans }}</button>
     </div>
   </div>
 </div>
@@ -477,7 +477,7 @@
   <h3 class='mb-3 p-2 pl-3 section-title'>{{ 'Manage tags of the team'|trans }}</h3>
   <div class='pl-3'>
 
-    <button class='button btn btn-primary' data-action='deduplicate-tag'><i class='fas fa-clone mr-1 text-white'></i>{{ 'Deduplicate'|trans }}</button>
+    <button class='btn btn-primary' data-action='deduplicate-tag'><i class='fas fa-clone mr-1 text-white'></i>{{ 'Deduplicate'|trans }}</button>
     <div class='mt-2' id='tagMgrDiv'>
       {% for tag in tagsArr %}
         <p>
