--- a/src/templates/change-pass.html
+++ b/src/templates/change-pass.html
@@ -31,7 +31,7 @@
     <div class='row'>
       <div class='col-md-4'></div>
       <div class='col-md-4 text-center'>
-        <button class='button btn btn-primary' type='submit' name='Submit'>{{ 'Save new password'|trans }}</button>
+        <button class='btn btn-primary' type='submit' name='Submit'>{{ 'Save new password'|trans }}</button>
       </div>
       <div class='col-md-4'></div>
     </div>
