--- a/src/templates/register.html
+++ b/src/templates/register.html
@@ -96,7 +96,7 @@
 
         <!-- SUBMIT -->
         <div class='mt-4 text-center'>
-          <button type='submit' name='Submit' class='button btn btn-primary'>{{ 'create'|trans }}</button>
+          <button type='submit' name='Submit' class='btn btn-primary'>{{ 'create'|trans }}</button>
         </div>
       </div>
     </form>
