--- a/src/templates/ucp.html
+++ b/src/templates/ucp.html
@@ -291,7 +291,7 @@
       </div>
     {% endif %}
     <div class='mt-4 text-center'>
-      <button type='submit' class='button btn btn-primary'>{{ 'Save'|trans }}</button>
+      <button type='submit' class='btn btn-primary'>{{ 'Save'|trans }}</button>
     </div>
   </form>
 
@@ -318,7 +318,7 @@
   </div>
 
   <div class='mt-4 text-center'>
-    <button data-action='patch-account' class='button btn btn-primary'>{{ 'Save'|trans }}</button>
+    <button data-action='patch-account' class='btn btn-primary'>{{ 'Save'|trans }}</button>
   </div>
 </div>
 
@@ -350,7 +350,7 @@
     <hr>
 
     <div class='mt-4 text-center'>
-      <button data-action='create-apikey' class='button btn btn-primary'>{{ 'Generate an API Key'|trans }}</button>
+      <button data-action='create-apikey' class='btn btn-primary'>{{ 'Generate an API Key'|trans }}</button>
     </div>
 
   </div>
