--- a/src/templates/upload-replace-form.html
+++ b/src/templates/upload-replace-form.html
@@ -4,7 +4,7 @@
     <form enctype='multipart/form-data' action='api/v2/{{ upload.type }}/{{ upload.item_id }}/uploads/{{ upload.id }}' method='POST' class='form-inline' data-action='replace-uploaded-file' data-long-name='{{ upload.long_name }}' data-uploadid='{{ upload.id }}'>
       {{ App.Session.get('csrf')|csrf }}
       <input type='file' class='form-control mr-1 mt-1' name='file' required />
-      <button type='submit' class='button btn btn-primary mt-1'>{{ 'OK'|trans }}</button>
+      <button type='submit' class='btn btn-primary mt-1'>{{ 'OK'|trans }}</button>
     </form>
   </div>
 {% endif %}
